--- a/simpledbw/src/main/AndroidManifest.xml
+++ b/simpledbw/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.bh90210.simpledbw" />
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.github.bh90210.simpledbw">
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+</manifest>
