--- a/simpledbw/build.gradle
+++ b/simpledbw/build.gradle
@@ -1,30 +1,13 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
-
-publish {
-
-    def groupProjectID = 'com.github.bh90210'
-    def artifactProjectID = 'simpledbw'
-    def publishVersionID = '0.1.5'
-
-    userOrg = 'bh90210'
-    repoName = 'SimpleDBW'
-    groupId = groupProjectID
-    artifactId = artifactProjectID
-    publishVersion = publishVersionID
-    desc = 'a persistent (key/value) storage library/wrapper for android using badgerDB.'
-    website = 'https://github.com/bh90210/SimpleDBW'
-}
 
 repositories {
     flatDir {
-        dirs '.'
+        dirs './libs'
     }
 }
 
 android {
     compileSdkVersion 28
-
 
     defaultConfig {
         minSdkVersion 24
@@ -55,7 +38,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
 
-    implementation (name:'dbwrapper', ext:'aar')
     implementation 'net.vrallev.android:app-context:1.0.0'
     def lifecycle_version = "2.0.0"
     // ViewModel and LiveData
@@ -64,4 +46,6 @@ dependencies {
     // alternately - if using Java8, use the following instead of lifecycle-compiler
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
+    // Gomobile exported aar dependency
+    implementation (name:'dbwrapper', ext:'aar')
 }
